--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.1.1",
     "react-body-backgroundcolor": "^1.0.1",
     "react-dom": "^16.1.1",
+    "react-file-reader": "^1.1.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
