--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "lodash.debounce": "^4.0.8",
     "react": "^16.1.1",
     "react-body-backgroundcolor": "^1.0.1",
     "react-dom": "^16.1.1",
     "react-file-reader": "^1.1.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,8 +17,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "eslint": "^4.11.0",
-    "eslint-plugin-react": "^7.5.0"
-  }
+  "devDependencies": {}
 }
