--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "eslint": "^4.16.0",
     "react": "^16.1.1",
     "react-body-backgroundcolor": "^1.0.1",
     "react-dom": "^16.1.1",
     "react-file-reader": "^1.1.3",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
